compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__completions_for_outside_a_function.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 189
expression: "\n\npub fn main() {\n  0\n}"
---
|

pub fn main() {
  0
}


----- Completion content -----
