compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__completions_for_prelude_values.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 1751
expression: "\npub fn main() {\n  let my_bool = T\n}\n"
---
pub fn main() {
  let my_bool = T|
}


----- Completion content -----
Error
  kind:   Constructor
  detail: rakun
  sort:   4_Error
False
  kind:   EnumMember
  detail: rakun
  sort:   4_False
Nil
  kind:   EnumMember
  detail: rakun
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: rakun
  sort:   4_Ok
True
  kind:   EnumMember
  detail: rakun
  sort:   4_True
main
  kind:   Function
  detail: fn() -> a
  sort:   2_main
  desc:   app
  edits:
    [2:16-2:16]: "main"
