compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__completions_for_private_record_access.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 1613
expression: "\nrecord Wibble {\n  Wibble(wibble: Int, wobble: Int)\n  Wobble(wabble: Int, wobble: Int)\n}\n\nfn fun() {\n  let wibble = Wibble(1, 2)\n  wibble.wobble\n}\n"
---
record Wibble {
  Wibble(wibble: Int, wobble: Int)
  Wobble(wabble: Int, wobble: Int)
}

fn fun() {
  let wibble = Wibble(1, 2)
  wibble.wobble|
}


----- Completion content -----
Error
  kind:   Constructor
  detail: rakun
  sort:   4_Error
False
  kind:   EnumMember
  detail: rakun
  sort:   4_False
Nil
  kind:   EnumMember
  detail: rakun
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: rakun
  sort:   4_Ok
True
  kind:   EnumMember
  detail: rakun
  sort:   4_True
wibble
  kind:   Field
  detail: Int
  sort:   1_wibble
wobble
  kind:   Field
  detail: Int
  sort:   1_wobble
