compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__completions_for_record_access_known_variant.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nrecord Wibble {\n  Wibble(a: Int, b: Int, c: Int, d: Int)\n  Wobble(z: Bool)\n}\n\nfn fun(some_wibble: Wibble) {\n  case some_wibble {\n    Wibble(..) as w -> w.a\n    Wobble(..) -> panic\n  }\n}\n"
---
record Wibble {
  Wibble(a: Int, b: Int, c: Int, d: Int)
  Wobble(z: Bool)
}

fn fun(some_wibble: Wibble) {
  case some_wibble {
    Wibble(..) as w -> w.a|
    Wobble(..) -> panic
  }
}


----- Completion content -----
Error
  kind:   Constructor
  detail: rakun
  sort:   4_Error
False
  kind:   EnumMember
  detail: rakun
  sort:   4_False
Nil
  kind:   EnumMember
  detail: rakun
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: rakun
  sort:   4_Ok
True
  kind:   EnumMember
  detail: rakun
  sort:   4_True
a
  kind:   Field
  detail: Int
  sort:   1_a
b
  kind:   Field
  detail: Int
  sort:   1_b
c
  kind:   Field
  detail: Int
  sort:   1_c
d
  kind:   Field
  detail: Int
  sort:   1_d
