compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__completions_for_record_labels.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 1663
expression: "\npub record Wibble {\n  Wibble(wibble: String, wobble: Int)\n}\n\nfn fun() { // completion inside parens below includes labels\n  let wibble = Wibble()\n}\n"
---
pub record Wibble {
  Wibble(wibble: String, wobble: Int)
}

fn fun() { // completion inside parens below includes labels
  let wibble = Wibble(|)
}


----- Completion content -----
Error
  kind:   Constructor
  detail: rakun
  sort:   4_Error
False
  kind:   EnumMember
  detail: rakun
  sort:   4_False
Nil
  kind:   EnumMember
  detail: rakun
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: rakun
  sort:   4_Ok
True
  kind:   EnumMember
  detail: rakun
  sort:   4_True
Wibble
  kind:   Constructor
  detail: fn(String, Int) -> Wibble
  sort:   2_Wibble
  desc:   app
  edits:
    [6:22-6:22]: "Wibble"
fun
  kind:   Function
  detail: fn() -> Wibble
  sort:   2_fun
  desc:   app
  edits:
    [6:22-6:22]: "fun"
wibble:
  kind:   Field
  detail: String
  sort:   0_wibble:
wobble:
  kind:   Field
  detail: Int
  sort:   0_wobble:
