compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__for_type_alias.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\npub type Wibble = Result<\n  String,\n  String\n>\n"
---
pub type Wibble = Result<
|  String,
  String
>


----- Completion content -----
BitArray
  kind:   Class
  detail: Type
  sort:   4_BitArray
Bool
  kind:   Class
  detail: Type
  sort:   4_Bool
Float
  kind:   Class
  detail: Type
  sort:   4_Float
Int
  kind:   Class
  detail: Type
  sort:   4_Int
List
  kind:   Class
  detail: Type
  sort:   4_List
Nil
  kind:   Class
  detail: Type
  sort:   4_Nil
Result
  kind:   Class
  detail: Type
  sort:   4_Result
String
  kind:   Class
  detail: Type
  sort:   4_String
UtfCodepoint
  kind:   Class
  detail: Type
  sort:   4_UtfCodepoint
Wibble
  kind:   Class
  detail: Type
  sort:   2_Wibble
  edits:
    [2:0-2:0]: "Wibble"
